agrego las columnas de bootstrap y modifico algunos elementos de la estetica, reduzco los estilos de css y agrego responsive

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,16 +7,34 @@
     box-sizing: border-box;
 }
 
-/*El contenedor del logo y de las lista items con su color y borde*/
-.padreNavHeader{
+/*La imagen de fondo de la pagina*/
+body{
+    height: 100%;
+    background-image: url("../assets/img/Fondo_gimnasio_2.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    overflow-y: visible;
+}
+
+/*El color de la navegacion*/
+.header{
     background-color: rgba(94, 9, 173, 0.582);
-    border: solid 2px black;
+}
+
+/*El margen que ocupa el main*/
+.main{
+    height: 80%;
+}
+
+/*El margen que ocupa el footer*/
+.footer{
+    height: 5vh;
 }
 
 /*El contenedor de los items de la navegacion con su color y borde*/
 .listaNav .box{
     background-color: blueviolet;
-    border: solid 1px white;
 }
 
 /*Los items de la navegacion con su color*/
@@ -54,15 +72,6 @@
     color: rgb(189, 181, 181);
 }
 
-/*La imagen de fondo de la pagina*/
-body{
-    background-image: url("../assets/img/Fondo_gimnasio_2.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    overflow-y: visible;
-}
-
 /*El color del texto del pie de pagina*/
 .piePagina{
     color: lightgrey;
@@ -70,55 +79,59 @@ body{
 
 /*El tamaño configurado para dispositivos moviles*/
 @media screen and (min-width: 0px) and (max-width: 768px) {
+    /*El navegador ubicado en columnas*/
     .padreNavHeader{
         flex-direction: column;
-        height: initial;
     }
-
+    
+    /*El logo de la pagina con sus dimensiones*/
     .logoPrincipal a img{
         width: 80px;
         height: 80px;
         display: block;
-        margin: 10px;
     }
 
+    /*El contenedor de la lista y su tamaño a lo ancho*/
     .navHeader{
         width: 100%;
     }
 
+    /*El contenedor de las li ubicado en columnas*/
     .listaNav{
         display: block;
-    }
-    
-    .listaNav .box{
-        border-bottom: 1px solid white;
+        flex-direction: column;
         text-align: center;
-        margin: 5px;
+        justify-content: center;
     }
 
+    /*El tamaño de fuente del texto de los items*/
     .listaNav .box a{
-        font-size: 1,5rem;
+        font-size: 1,2rem;
     }
 
+    /*El tamaño del video del index*/
     .video{
         width: 40vh;
         height: 30vh;
     }
 
+    /*El tamaño de todas las imagenes*/
     .imagenes{
         width: 40vh;
         height: 30vh;
     }
 
+    /*El tamaño del mapa en registro*/
     .mapa{
         width: 40vh;
         height: 30vh;
     }
 
+    /*El tamaño, margen y borde del logo de wsp*/
     .logoWsp{
-        top: 20px;
-        width: 50px;
-        height: 50px;
+        top: 5px;
+        width: 40px;
+        height: 40px;
         border-radius: 30px;
     }
 }
