--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 $contenedor-block: block;
 $contenedor-flexible-columnas: column;
-$ancho-elementos: 40vh;
-$alto-elementos: 30vh;
+$ancho-elementos: 80vw;
+$alto-elementos: 40vh;
 
 $colores: (
     principal: blueviolet,
