--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,20 +1,25 @@
 .main{
     height: 80%;
+    .logoWsp{
+        transition: transform 3s;
+        &:hover{
+            transform: translate(-20px,-20px) rotate(360deg) scale(1.5,1.5);
+        }
+    }
 }
 
 @media screen and (min-width: 0px) and (max-width: 768px){
     .main{
-        &{
-            .logoWsp{
+        .logoWsp{
                 top: 5px;
                 width: 50px;
                 height: 50px;
                 border-radius: 30px;
-                transition: transform 5s;
-            }
-            .logoWsp:hover{
-                transform: rotate(360deg);
+                transition: transform 3s;
+                &:hover{
+                    transform: rotate(360deg);
             }
         }
-    }    
+    }
 }
+    
