--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,5 +1,4 @@
-@mixin width-height-video($ancho,$alto){
+@mixin height-video($alto){
     display: block;
-    widht: $ancho;
     height: $alto;
 }
