--- a/scss/_utilitarias.scss
+++ b/scss/_utilitarias.scss
@@ -21,9 +21,8 @@
 @media screen and (min-width: 0px) and (max-width: 768px){
 
 .video{
-    /*width: $ancho-elementos;
-    height: $alto-elementos;*/
-    @include width-height-video(40vh,30vh);
+    width: $ancho-elementos;
+    @include height-video(40vh);
 }
 
 .imagenes{
