--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,8 +11,7 @@
                         &:hover{
                             color: map-get($colores, principal);
                         }
-                    }
-                    
+                    }                  
                 }
                 .box:hover{
                     background-color: map-get($colores, titulo-parrafo);
@@ -23,26 +22,29 @@
 }
 
 @media screen and (min-width: 0px) and (max-width: 768px){
-    .padreNavHeader{
-        flex-direction: $contenedor-flexible-columnas;
-        .logoPrincipal a img{
-            width: 80px;
-            height: 80px;
-            display: $contenedor-block;
-        }
-        .navHeader{
-            width: 100%;
-            .listaNav{
+   .header{
+        position: initial;
+        .padreNavHeader{
+            flex-direction: $contenedor-flexible-columnas;
+            .logoPrincipal a img{
+                width: 80px;
+                height: 80px;
                 display: $contenedor-block;
-                flex-direction: $contenedor-flexible-columnas;
-                text-align: center;
-                justify-content: center;
-                .box{
-                    &{
-                        font-size: 1,2rem;
+            }
+            .navHeader{
+                width: 100%;
+                .listaNav{
+                    display: $contenedor-block;
+                    flex-direction: $contenedor-flexible-columnas;
+                    text-align: center;
+                    justify-content: center;
+                    .box{
+                        &{
+                            font-size: 1,2rem;
+                        }
                     }
                 }
             }
         }
     }
-}
+}   
