--- a/scss/_utilitarias.scss
+++ b/scss/_utilitarias.scss
@@ -10,8 +10,53 @@
     color: map-get($colores, titulo-parrafo);
 }
 
+.formulario{
+    width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    background-image: linear-gradient(to right bottom, #000000, #2d091d, #4f003d, #68006b, #700aa6);
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+.formulario label{
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.formulario input[type="text"],
+.formulario input[type="numero"],
+.formulario input[type="comment"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+.formulario input[type="submit"],
+.formulario input[type="reset"] {
+    background-color: map-get($colores, boton-formulario);
+    color: map-get($colores, titulo-parrafo);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.formulario input[type="submit"]:hover,
+.formulario input[type="reset"]:hover{
+    background-color: map-get($colores, principal);
+}
+
 .fuenteFormulario{
-    color: map-get($colores, fuente-formulario);
+    color: map-get($colores, titulo-parrafo);
+}
+
+.iconoGrande{
+    font-size: 400px;
 }
 
 @media screen and (min-width: 0px) and (max-width: 768px){
