--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,6 +8,6 @@ $colores: (
     titulo-parrafo: white,
     subtitulos: violet,
     navegador: rgb(94, 9, 173),
-    fuente-formulario: rgb(189, 181, 181),
-    pie-de-pagina: lightgrey
+    boton-formulario: black,
+    pie-de-pagina: lightgrey,
 );
