--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,33 +1,113 @@
-.main{
-    .logoWsp{
-        transition: transform 2s;
-        &:hover{
-            transform: translate(-20px,-20px) rotate(360deg) scale(1.5,1.5);
-        }
+.main {
+  .logoWsp {
+    top: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    transition: transform 2s;
+    &:hover {
+      transform: translate(-20px, -20px) rotate(360deg) scale(1.5, 1.5);
     }
-    .imagenes{
-        transition: transform 1s;
-        &:hover{
-            transform: scale(1.2);
-        }
+  }
+  .imagenes {
+    width: 600px;
+    height: 300px;
+    transition: transform 1s;
+    &:hover {
+      transform: scale(1.2);
     }
+  }
+  .tituloPrincipal {
+    color: map-get($colores, titulo-parrafo);
+  }
+
+  .tituloSub {
+    color: map-get($colores, subtitulos);
+  }
+
+  .tamanioParrafo {
+    color: map-get($colores, titulo-parrafo);
+  }
+  .formulario {
+    width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    background-image: linear-gradient(
+      to right bottom,
+      #000000,
+      #2d091d,
+      #4f003d,
+      #68006b,
+      #700aa6
+    );
+    border: 1px solid white;
+    border-radius: 5px;
+    .formulario label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+    .formulario input[type="text"],
+    .formulario input[type="numero"],
+    .formulario input[type="comment"] {
+      width: 100%;
+      padding: 8px;
+      margin-bottom: 10px;
+      border: 1px solid black;
+      border-radius: 3px;
+    }
+    .formulario input[type="submit"],
+    .formulario input[type="reset"] {
+      background-color: map-get($colores, boton-formulario);
+      color: map-get($colores, titulo-parrafo);
+      border: none;
+      padding: 10px 20px;
+      border-radius: 3px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .formulario input[type="submit"]:hover,
+    .formulario input[type="reset"]:hover {
+      background-color: map-get($colores, principal);
+    }
+    .fuenteFormulario {
+      color: map-get($colores, titulo-parrafo);
+    }
+  }
+  .iconoGrande {
+    font-size: 400px;
+  }
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px){
-    .main{
-        .logoWsp{
-                top: 5px;
-                width: 50px;
-                height: 50px;
-                border-radius: 30px;
-                transition: transform 3s;
-                &:hover{
-                    transform: rotate(360deg);
-            }
-        }
-        .icono{
-            font-size: 200px;
-        }
+@media screen and (min-width: 0px) and (max-width: 768px) {
+  .main {
+    .logoWsp {
+      top: 5px;
+      width: 50px;
+      height: 50px;
+      border-radius: 30px;
+      transition: transform 3s;
+      &:hover {
+        transform: rotate(360deg);
+      }
     }
+    .icono {
+      font-size: 200px;
+    }
+    .video {
+      width: $ancho-elementos;
+      @include height-video(40vh);
+    }
+
+    .imagenes {
+      width: $ancho-elementos;
+      height: $alto-elementos;
+    }
+
+    .mapa {
+      width: $ancho-elementos;
+      height: $alto-elementos;
+    }
+  }
 }
-    
