--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,16 +14,73 @@ body {
   overflow-y: visible;
 }
 
+.header {
+  background-color: rgb(94, 9, 173);
+  background-image: linear-gradient(to right, #383a9e, #463cab, #553eb7, #653fc3, #763fcf, #8444d5, #9249da, #a04ee0, #ac5be2, #b867e5, #c374e7, #cd81ea);
+}
+.header .padreNavHeader {
+  display: flex;
+}
+.header .padreNavHeader .logo {
+  width: 80px;
+  height: 80px;
+}
+.header .padreNavHeader .menu {
+  display: none;
+}
+.header .listaNav {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: end;
+  margin-top: 35px;
+}
+.header .listaNav .box {
+  background-color: blueviolet;
+}
+.header .listaNav .box a {
+  color: white;
+  font-size: 1rem;
+  text-decoration: none;
+}
+.header .listaNav .box:hover {
+  background-color: white;
+}
+.header .listaNav .box:hover a:hover {
+  color: blueviolet;
+}
+
+.logoWsp {
+  display: block;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 50px;
+  transition: transform 1s ease;
+}
+
+.logoWsp:hover {
+  transform: scale(1.3) rotate(360deg);
+}
+
 .tituloPrincipal {
   color: white;
+}
+
+.tamanioParrafo {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.486);
 }
 
 .tituloSub {
   color: violet;
 }
 
-.tamanioParrafo {
-  color: white;
+.imagenes {
+  width: 70vw;
+  height: 90vh;
 }
 
 .formulario {
@@ -75,10 +132,47 @@ body {
   font-size: 400px;
 }
 
+.footer {
+  background-image: linear-gradient(to bottom, #ffffff, #eae4f8, #d9c8ee, #ccabe2, #c38dd2);
+}
+.footer .piePagina {
+  color: blueviolet;
+}
+
 @media screen and (min-width: 0px) and (max-width: 768px) {
-  .video {
-    width: 80vw;
+  .header {
+    position: initial;
+  }
+  .header .padreNavHeader {
+    justify-content: center;
+  }
+  .header .padreNavHeader .logoPrincipal a img {
+    width: 80px;
+    height: 80px;
     display: block;
+  }
+  .header .padreNavHeader .menu {
+    display: flex;
+  }
+  .header .listaNav {
+    display: none;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+  .header .listaNav .box {
+    font-size: 1, 2rem;
+  }
+  .logoWsp {
+    display: none;
+    top: 5px;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+  }
+  .video {
+    display: block;
+    width: 80vw;
     height: 40vh;
   }
   .imagenes {
@@ -89,81 +183,7 @@ body {
     width: 80vw;
     height: 40vh;
   }
-}
-.header {
-  background-color: rgb(94, 9, 173);
-  background-image: linear-gradient(to right, #383a9e, #463cab, #553eb7, #653fc3, #763fcf, #8444d5, #9249da, #a04ee0, #ac5be2, #b867e5, #c374e7, #cd81ea);
-}
-.header .padreNavHeader .navHeader .listaNav .box {
-  background-color: blueviolet;
-}
-.header .padreNavHeader .navHeader .listaNav .box a {
-  color: white;
-}
-.header .padreNavHeader .navHeader .listaNav .box a:hover {
-  color: blueviolet;
-}
-.header .padreNavHeader .navHeader .listaNav .box:hover {
-  background-color: white;
-}
-
-@media screen and (min-width: 0px) and (max-width: 768px) {
-  .header {
-    position: initial;
-  }
-  .header .padreNavHeader {
-    flex-direction: column;
-  }
-  .header .padreNavHeader .logoPrincipal a img {
-    width: 80px;
-    height: 80px;
-    display: block;
-  }
-  .header .padreNavHeader .navHeader {
-    width: 100%;
-  }
-  .header .padreNavHeader .navHeader .listaNav {
-    display: block;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-  }
-  .header .padreNavHeader .navHeader .listaNav .box {
-    font-size: 1, 2rem;
-  }
-}
-.main .logoWsp {
-  transition: transform 2s;
-}
-.main .logoWsp:hover {
-  transform: translate(-20px, -20px) rotate(360deg) scale(1.5, 1.5);
-}
-.main .imagenes {
-  transition: transform 1s;
-}
-.main .imagenes:hover {
-  transform: scale(1.2);
-}
-
-@media screen and (min-width: 0px) and (max-width: 768px) {
-  .main .logoWsp {
-    top: 5px;
-    width: 50px;
-    height: 50px;
-    border-radius: 30px;
-    transition: transform 3s;
-  }
-  .main .logoWsp:hover {
-    transform: rotate(360deg);
-  }
-  .main .icono {
+  .iconoGrande {
     font-size: 200px;
   }
 }
-.footer {
-  height: 90px;
-  background-image: linear-gradient(to bottom, #ffffff, #eae4f8, #d9c8ee, #ccabe2, #c38dd2);
-}
-.footer .piePagina {
-  color: blueviolet;
-}/*# sourceMappingURL=estilos.css.map */
