--- a/css/estilos_copia.css
+++ b/css/estilos_copia.css
@@ -1,137 +1,226 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
-
-/*Este es el reseteo de los valores*/
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-/*La imagen de fondo de la pagina*/
-body{
-    height: 100%;
-    background-image: url("../assets/img/Fondo_gimnasio_2.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    overflow-y: visible;
+body {
+  height: 100%;
+  background-image: url("../assets/img/Fondo_gimnasio_3.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  overflow-y: visible;
 }
 
-/*El color de la navegacion*/
-.header{
-    background-color: rgba(94, 9, 173, 0.582);
+.header {
+  background-color: rgb(94, 9, 173);
+  background-image: linear-gradient(
+    to right,
+    #383a9e,
+    #463cab,
+    #553eb7,
+    #653fc3,
+    #763fcf,
+    #8444d5,
+    #9249da,
+    #a04ee0,
+    #ac5be2,
+    #b867e5,
+    #c374e7,
+    #cd81ea
+  );
 }
 
-/*El margen que ocupa el main*/
-.main{
-    height: 80%;
+.padreNavHeader {
+  display: flex;
 }
 
-/*El margen que ocupa el footer*/
-.footer{
-    height: 5vh;
+.logo {
+  width: 80px;
+  height: 80px;
 }
 
-/*El contenedor de los items de la navegacion con su color y borde*/
-.listaNav .box{
-    background-color: blueviolet;
+.listaNav {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: end;
+  margin-top: 35px;
 }
 
-/*Los items de la navegacion con su color*/
-.listaNav .box a{
-    color: white;
+.box {
+  background-color: blueviolet;
 }
 
-/*El color del hover del contenedor*/
-.box:hover{
-    background-color: white;
+.box:hover {
+  background-color: white;
 }
 
-/*El color del hover del texto*/
-.box a:hover{
-    color: blueviolet;
+a {
+  color: white;
+  font-size: 1rem;
+  text-decoration: none;
 }
 
-/*El color del titulo principal*/
-.tituloPrincipal{
-    color:white;
+a:hover {
+  color: blueviolet;
 }
 
-/*El color de los titulos secundarios*/
-.tituloSub{
-    color: violet;
+.logoWsp {
+  display: block;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 50px;
+  transition: transform 1s ease;
 }
 
-/*El color del texto de los parrafos*/
-.tamanioParrafo{
-    color: white;
+.logoWsp:hover {
+  transform: scale(1.3) rotate(360deg);
 }
 
-/*El color del texto del formulario*/
-.fuenteFormulario{
-    color: rgb(189, 181, 181);
+.tituloPrincipal {
+  color: white;
 }
 
-/*El color del texto del pie de pagina*/
-.piePagina{
-    color: lightgrey;
+.tamanioParrafo {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.486);
 }
 
-/*El tamaño configurado para dispositivos moviles*/
+.tituloSub {
+  color: violet;
+}
+
+.imagenes {
+  width: 70vw;
+  height: 90vh;
+}
+
+.formulario {
+  width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  background-image: linear-gradient(
+    to right bottom,
+    #000000,
+    #2d091d,
+    #4f003d,
+    #68006b,
+    #700aa6
+  );
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+.formulario label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.formulario input[type="text"],
+.formulario input[type="numero"],
+.formulario input[type="comment"] {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+.formulario input[type="submit"],
+.formulario input[type="reset"] {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.formulario input[type="submit"]:hover,
+.formulario input[type="reset"]:hover {
+  background-color: blueviolet;
+}
+
+.fuenteFormulario {
+  color: white;
+}
+
+.iconoGrande {
+  font-size: 400px;
+}
+
+.footer {
+  height: 90px;
+  background-image: linear-gradient(
+    to bottom,
+    #ffffff,
+    #eae4f8,
+    #d9c8ee,
+    #ccabe2,
+    #c38dd2
+  );
+}
+
+.piePagina {
+  color: blueviolet;
+}
+
 @media screen and (min-width: 0px) and (max-width: 768px) {
-    /*El navegador ubicado en columnas*/
-    .padreNavHeader{
-        flex-direction: column;
-    }
-    
-    /*El logo de la pagina con sus dimensiones*/
-    .logoPrincipal a img{
-        width: 80px;
-        height: 80px;
-        display: block;
-    }
+  .header {
+    position: initial;
+  }
 
-    /*El contenedor de la lista y su tamaño a lo ancho*/
-    .navHeader{
-        width: 100%;
-    }
+  .padreNavHeader {
+    flex-direction: column;
+  }
 
-    /*El contenedor de las li ubicado en columnas*/
-    .listaNav{
-        display: block;
-        flex-direction: column;
-        text-align: center;
-        justify-content: center;
-    }
+  .logoPrincipal a img {
+    width: 80px;
+    height: 80px;
+    display: block;
+  }
 
-    /*El tamaño de fuente del texto de los items*/
-    .listaNav .box a{
-        font-size: 1,2rem;
-    }
+  .listaNav {
+    display: block;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
 
-    /*El tamaño del video del index*/
-    .video{
-        width: 40vh;
-        height: 30vh;
-    }
+  .box {
+    font-size: 1, 2rem;
+  }
 
-    /*El tamaño de todas las imagenes*/
-    .imagenes{
-        width: 40vh;
-        height: 30vh;
-    }
+  .logoWsp {
+    top: 5px;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+  }
 
-    /*El tamaño del mapa en registro*/
-    .mapa{
-        width: 40vh;
-        height: 30vh;
-    }
+  .video {
+    display: block;
+    width: 80vw;
+    height: 40vh;
+  }
+  .imagenes {
+    width: 80vw;
+    height: 40vh;
+  }
+  .mapa {
+    width: 80vw;
+    height: 40vh;
+  }
 
-    /*El tamaño, margen y borde del logo de wsp*/
-    .logoWsp{
-        top: 5px;
-        width: 40px;
-        height: 40px;
-        border-radius: 30px;
-    }
-}
+  .iconoGrande {
+    font-size: 200px;
+  }
+} /*# sourceMappingURL=estilos.css.map */
