--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: map-get($colores, navegador);
+  background-color: rgb(94, 9, 173);
   background-image: linear-gradient(
     to right,
     #383a9e,
@@ -16,52 +16,34 @@
     #cd81ea
   );
   .padreNavHeader {
+    display: flex;
     .logo {
-      width: "70px";
-      height: "70px";
+      width: 80px;
+      height: 80px;
     }
-    .navHeader {
-      .listaNav {
-        .box {
-          background-color: map-get($colores, principal);
-          a {
-            color: map-get($colores, titulo-parrafo);
-            &:hover {
-              color: map-get($colores, principal);
-            }
-          }
-        }
-        .box:hover {
-          background-color: map-get($colores, titulo-parrafo);
-        }
-      }
+    .menu {
+      display: none;
     }
   }
-}
-
-@media screen and (min-width: 0px) and (max-width: 768px) {
-  .header {
-    position: initial;
-    .padreNavHeader {
-      flex-direction: $contenedor-flexible-columnas;
-      .logoPrincipal a img {
-        width: 80px;
-        height: 80px;
-        display: $contenedor-block;
+  .listaNav {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: end;
+    margin-top: 35px;
+    .box {
+      background-color: blueviolet;
+      a {
+        color: white;
+        font-size: 1rem;
+        text-decoration: none;
       }
-      .navHeader {
-        width: 100%;
-        .listaNav {
-          display: $contenedor-block;
-          flex-direction: $contenedor-flexible-columnas;
-          text-align: center;
-          justify-content: center;
-          .box {
-            & {
-              font-size: 1, 2rem;
-            }
-          }
-        }
+    }
+
+    .box:hover {
+      background-color: white;
+      a:hover {
+        color: blueviolet;
       }
     }
   }
