--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,8 +1,10 @@
-@import 'variables.scss';
-@import 'reset.scss';
-@import 'mixin.scss';
-@import 'utilitarias.scss';
-@import 'header.scss';
-@import 'main.scss';
-@import 'footer.scss';
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
+@import "reset";
+@import "header";
+@import "main";
+@import "footer";
+@import "utilitarias";
+@import "variables";
+@import "mixin";
+@import "mediaqueri";
+/*# sourceMappingURL=estilos.css.map */
